2017-01-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid snprintf() overhead in directory stream functions.

	* mingwex/dirent.c (dirent_update): Do not use either snprintf() or
	snwprintf() functions when updating dd->d_name and dd->d_namlen data;
	emulate them instead, using a lightweight inline char-by-char counted
	copy loop, operating on char or wchar_t data as appropriate.
	(DIRENT_ASSIGN_NAME): Macro no longer required; delete it.
	(NUL): New manifest constant; define it.

2017-01-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid #include_next misbehaviour; cf. MinGW-Bug [#2330]

	* include/ctype.h (wctype.h): Use "..." form of #include, rather than
	the <...> form; we must include our own corresponding mingwrt version
	of this subsidiary header, and avoid any bogus alternative which may
	have been insinuated earlier in the system header path.

	* include/string.h (wchar.h): Likewise.

2017-01-25  Jason Hood  <jadoxa@yahoo.com.au>

	Correct quoted backslash handling, per bug [#2328].

	* setargv.c (__mingw32_setargv): Within single quotes, backslashes
	should be interpreted literally; copy them as-is.

2017-01-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Use C99 blanks as default argv separators, per issue [#2329].

	* setargv.c [_ISOC99_SOURCE]: Require it.
	(__mingw32_setargv): Separate command line arguments based on...
	[(quoted == 0) && isblank( c )]: ...this condition, instead of on...
	[(quoted == 0) && isspace( c )]: ...this, so that only blanks, rather
	than any whitespace characters, serve as default argument separators.

2017-01-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct <strings.h> preprocessor logic; fix bug [#2322]

	* include/strings.h (_stricmp, _strnicmp): Always declare, unless...
	[__STRICT_ANSI__ && __NO_INLINE__]: ...both of these are defined.

2016-11-28  Keith Marshall  <keithmarshall@users.sourceforge.net>
